--- a/src/plugin/css/common.css
+++ b/src/plugin/css/common.css
@@ -68,7 +68,7 @@
     margin-top: 22px;
 }
 
-.active {
+.activing {
     background: rgba(42, 133, 113, 1);
     box-shadow: 0px 6px 6px 0px rgba(204, 204, 204, 0.3);
 }
