--- a/src/plugin/css/reset.css
+++ b/src/plugin/css/reset.css
@@ -4,6 +4,24 @@
     list-style: none;
 }
 
+html {
+    overflow-y: scroll;
+}
+
+ :root {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+ :root body {
+    position: absolute;
+}
+
+body {
+    width: 100vw;
+    overflow: hidden;
+}
+
 
 /*
 KISSY CSS Reset
