--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -3,54 +3,49 @@
   background-color: #2a8571;
 }
 .banner {
+  width: 100%;
+  height:603px;
+  background-image: url("../images/swiperbanner.png");
+  background-size: cover;
   position: relative;
-  .carousel-indicators {
-    left: 95%;
-    width: 6%;
-    margin-left: 0;
-    overflow: hidden;
-    top: 50%;
-    margin-top: 63px;
-  }
-  .carousel-inner > .item > a > img,
-  .carousel-inner > .item > img,
-  .img-responsive,
-  .thumbnail a > img,
-  .thumbnail > img {
-    height: 100%;
-  }
-  .carousel-indicators li {
-    display: block;
-    width: 24px;
-    height: 24px;
-    line-height: 24px;
-    border-radius: 50%;
-    text-indent: 0;
-    font-size: 12px;
-    font-family: Source Han Sans CN;
-    font-weight: 400;
-    text-align: center;
-    border: 1px solid rgba(42, 133, 113, 1);
-    color: rgba(42, 133, 113, 1);
-    background-color: #fff;
-  }
-  .carousel-indicators .active {
-    font-size: 12px;
-    font-family: Source Han Sans CN;
-    font-weight: 400;
-    color: rgba(255, 255, 255, 1);
-    background: rgba(42, 133, 113, 1);
-  }
   .coustomer {
-    position: absolute;
-    top: 50%;
+    position: fixed;
+    top: 400px;
     right: 10px;
     z-index: 99;
     img {
       height: 63px;
     }
+    ol{
+      li{
+         width: 24px;
+         height: 24px;
+         line-height: 24px;
+         border-radius: 50%;
+         text-indent: 0;
+         font-size: 12px;
+         font-family: Source Han Sans CN;
+         font-weight: 400;
+         text-align: center;
+         border: 1px solid rgba(42, 133, 113, 1);
+         color: rgba(42, 133, 113, 1);
+         background-color: #fff;
+         &.now{
+          font-size: 12px;
+          font-family: Source Han Sans CN;
+          font-weight: 400;
+          color: rgba(255, 255, 255, 1);
+          background: rgba(42, 133, 113, 1);
+         }
+         a{
+          display: block;
+          width: 100%;
+          height: 100%;
+      }
+         }
+      }
+    }
   }
-}
 .center {
   position: absolute;
   left: 50%;
@@ -237,8 +232,7 @@
   }
 }
 .news {
-  .row {
-  }
+  
   .news-title {
     font-size: 36px;
     font-family: Source Han Sans CN;
@@ -338,6 +332,9 @@
     .tab-content {
       .news_top {
         margin-top: 10px;
+        .timedate{
+          position: relative;
+        }
         ul > li {
           width: 34px;
           height: 34px;
@@ -346,12 +343,171 @@
           float: left;
           text-align: center;
           margin-left: 5px;
-          font-size:18px;
-font-family:Source Han Sans CN;
-font-weight:400;
-color:rgba(42,133,113,1);
+          font-size: 18px;
+          font-family: Source Han Sans CN;
+          font-weight: 400;
+          color: rgba(42, 133, 113, 1);
+        }
+        .datepicker {
+          width: 127px;
+          height: 34px;
+          text-indent: 2em;
+        }
+      }
+      .news_foot {
+        img {
+          height: 139px;
         }
       }
     }
   }
+}
+// 热门服务部分
+.hotserve {
+  margin-top: 100px;
+  padding-bottom: 76px;
+  .hot-title {
+    font-size: 36px;
+    font-family: Source Han Sans CN;
+    font-weight: bold;
+    color: rgba(51, 51, 51, 1);
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .role {
+    .serve-main {
+      display: flex;
+      justify-content: space-between;
+      .serve-item {
+        width: 288px;
+        padding: 20px;
+        background: rgba(255, 255, 255, 1);
+        border-radius: 4px;
+        p {
+          font-size: 22px;
+          font-family: Source Han Sans CN;
+          font-weight: 400;
+          color: rgba(42, 133, 113, 1);
+          margin-bottom: 10px;
+        }
+        .serve-wailian {
+          li {
+            a {
+              font-size: 14px;
+              font-family: Source Han Sans CN;
+              font-weight: 300;
+              color: rgba(51, 51, 51, 1);
+            }
+          }
+        }
+      }
+    }
+  }
+  .wailian-extend {
+    padding: 20px;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 4px;
+    div {
+      border-bottom: 1px dotted rgba(204, 204, 204, 1);
+      padding: 20px 0;
+      &.extend-3 {
+        border-bottom: none;
+      }
+      ul {
+        display: flex;
+        justify-content: space-between;
+        .extend-item {
+          flex-grow: 1;
+          h4 {
+            font-size: 18px;
+            font-family: Source Han Sans CN;
+            font-weight: 400;
+            color: rgba(42, 133, 113, 1);
+            margin-bottom: 10px;
+          }
+        }
+      }
+    }
+  }
+}
+//特色资源
+.special-serve {
+  margin-top: 40px;
+  .special-title {
+    font-size: 36px;
+    font-family: Source Han Sans CN;
+    font-weight: bold;
+    color: rgba(51, 51, 51, 1);
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .special-box {
+    ul {
+      display: flex;
+      justify-content: center;
+      flex-flow: wrap;
+      li {
+        padding-left: 20px;
+        margin-bottom: 50px;
+        flex-grow: 1;
+        a {
+          display: block;
+          position: relative;
+          span {
+            width: 120px;
+            position: absolute;
+            bottom: 30px;
+            left: 50%;
+           margin-left: -70px;
+            font-size: 20px;
+            font-family: Microsoft YaHei;
+            font-weight: bold;
+            color: rgba(255, 255, 255, 1);
+          }
+        }
+      }
+    }
+  }
+}
+//阅读推荐
+.reader{
+  margin-top: 100px;
+  .reader-title{
+    font-size: 36px;
+    font-family: Source Han Sans CN;
+    font-weight: bold;
+    color: rgba(51, 51, 51, 1);
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .reader-tab {
+    .nav-tabs{
+      margin-bottom: 20px;
+    }
+   .nav-tabs > li > a{
+    font-size:22px;
+    font-family:Source Han Sans CN;
+    font-weight:400;
+    color:rgba(51,51,51,1);
+   }
+      .nav-tabs > li.active {
+        background: rgba(42, 133, 113, 1);
+        border-bottom: 1px solid rgba(42, 133, 113, 1);
+      }
+      .nav-tabs > li.active > a {
+        background: rgba(42, 133, 113, 1);
+        font-size:22px;
+font-family:Source Han Sans CN;
+font-weight:400;
+color:rgba(255,255,255,1);
+        
+      }
+      .nav-tabs > li.active > a,
+      .nav-tabs > li.active > a:focus,
+      .nav-tabs > li.active > a:hover {
+        border: none;
+        border-bottom: 1px solid rgba(42, 133, 113, 1);
+      }
+    }
+  
 }
