--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -472,6 +472,7 @@
 //阅读推荐
 .reader{
   margin-top: 100px;
+  margin-bottom: 100px;
   .reader-title{
     font-size: 36px;
     font-family: Source Han Sans CN;
@@ -484,6 +485,7 @@
     .nav-tabs{
       margin-bottom: 20px;
     }
+    .tab-content{height: 360px;}
    .nav-tabs > li > a{
     font-size:22px;
     font-family:Source Han Sans CN;
