--- a/src/styles/mylibray.less
+++ b/src/styles/mylibray.less
@@ -1,9 +1,11 @@
 body {
   background-color: #f7f9f9;
 }
+
 .main {
   .main-tab {
     cursor: pointer;
+
     p {
       margin: 25px 0;
       font-size: 14px;
@@ -12,26 +14,31 @@ body {
       color: rgba(170, 170, 170, 1);
     }
   }
+
   .main-user {
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
     border-radius: 4px;
     padding: 21px 41px;
     margin-bottom: 18px;
+
     .profile {
       span {
         font-size: 20px;
         font-family: Source Han Sans CN;
         font-weight: 400;
         color: rgba(51, 51, 51, 1);
+
         img {
           vertical-align: middle;
         }
+
         &.updata {
           font-size: 14px;
           font-family: PingFang SC;
           font-weight: 400;
           margin-left: 10px;
+
           a {
             color: rgba(42, 133, 113, 1);
             display: inline-block;
@@ -45,6 +52,7 @@ body {
         }
       }
     }
+
     div {
       .profile-left {
         p {
@@ -52,6 +60,7 @@ body {
           font-family: Source Han Sans CN;
           font-weight: 400;
           color: rgba(51, 51, 51, 1);
+
           &:nth-child(2) {
             font-size: 14px;
             font-family: Source Han Sans CN;
@@ -59,6 +68,7 @@ body {
             color: rgba(153, 153, 153, 1);
           }
         }
+
         .touxiang {
           width: 70px;
           height: 70px;
@@ -66,11 +76,13 @@ body {
           background: skyblue;
           margin-right: 20px;
         }
-        ul > li {
+
+        ul>li {
           font-size: 17px;
           font-family: Source Han Sans CN;
           font-weight: 400;
           color: rgba(254, 0, 0, 1);
+
           span {
             font-size: 14px;
             font-family: Source Han Sans CN;
@@ -78,15 +90,18 @@ body {
             color: rgba(153, 153, 153, 1);
             margin-right: 10px;
           }
+
           img {
             margin-left: 5px;
           }
         }
       }
     }
+
     .profile-right {
       ul {
         margin-left: 20px;
+
         li {
           float: left;
           margin-left: 10px;
@@ -97,11 +112,13 @@ body {
           text-align: center;
           padding: 34px 0 21px 0;
           position: relative;
+
           div {
             font-size: 18px;
             font-family: PingFang SC;
             font-weight: bold;
             color: #999999;
+
             span {
               font-size: 24px;
               font-family: PingFang SC;
@@ -110,9 +127,11 @@ body {
               margin-right: 5px;
             }
           }
+
           .messageicon {
             margin-bottom: 14px;
           }
+
           p {
             font-size: 14px;
             font-family: Source Han Sans CN;
@@ -121,6 +140,7 @@ body {
             margin-top: 13px;
             opacity: 0.99;
           }
+
           .more {
             position: absolute;
             top: 5px;
@@ -130,32 +150,39 @@ body {
       }
     }
   }
+
   .main-serve {
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
     border-radius: 4px;
     margin-bottom: 19px;
-    ul > li {
+
+    ul>li {
       float: left;
       width: 171px;
       height: 150px;
       border-right: 1px solid rgba(230, 240, 238, 1);
       text-align: center;
+
       &:nth-last-child(1) {
         border-right: none;
       }
+
       &.action {
         background: rgba(230, 240, 238, 1);
         box-shadow: 0px 2px 6px 0px rgba(129, 200, 200, 0.5);
         border-radius: 4px;
       }
+
       .serve-center {
         height: 100%;
         padding-top: 22px;
+
         a {
           height: 100%;
           display: block;
         }
+
         p {
           margin-top: 13px;
           font-size: 16px;
@@ -167,22 +194,26 @@ body {
       }
     }
   }
+
   .main-table {
     padding: 18px 38px;
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
     border-radius: 4px;
+
     .table-head {
       font-size: 22px;
       font-family: Source Han Sans CN;
       font-weight: 400;
       color: rgba(51, 51, 51, 1);
       margin-bottom: 19px;
+
       img {
         vertical-align: middle;
         margin-right: 10px;
       }
     }
+
     .table {
       table {
         border-collapse: collapse;
@@ -205,6 +236,7 @@ body {
         font-family: Source Han Sans CN;
         font-weight: 400;
         color: rgba(255, 255, 255, 1);
+
         &:nth-child(1) {
           text-align: unset;
         }
@@ -226,6 +258,7 @@ body {
         display: block;
         margin-top: 4px;
         background-color: rgba(247, 249, 249, 1);
+
         &.now {
           height: 70px;
           line-height: 70px;
@@ -239,6 +272,7 @@ body {
         font-family: Source Han Sans CN;
         font-weight: 300;
         color: rgba(51, 51, 51, 1);
+
         button {
           width: 58px;
           height: 30px;
@@ -253,6 +287,7 @@ body {
           line-height: 30px;
         }
       }
+
       .detail_tb tr td input {
         float: left;
         margin: 12px 5px 0 10px;
@@ -260,11 +295,13 @@ body {
         border: 1px solid rgba(138, 197, 184, 1);
         border-radius: 2px;
       }
+
       .detail_tb tr td span {
         float: left;
       }
     }
   }
+
   .data-display {
     margin-top: 19px;
 
@@ -273,6 +310,7 @@ body {
         border-bottom: 4px solid #f4f7fb;
       }
     }
+
     .data-left,
     .data-right {
       width: 48%;
@@ -280,12 +318,14 @@ body {
       box-shadow: 0px 2px 9px 1px rgba(204, 204, 204, 0.5);
       background-color: #f7f9f9;
     }
+
     .data-top {
       font-size: 22px;
       font-family: Source Han Sans CN;
       font-weight: 400;
       color: rgba(51, 51, 51, 1);
       padding: 13px 42px;
+
       span {
         font-size: 20px;
         font-family: Source Han Sans CN;
@@ -293,49 +333,112 @@ body {
         color: rgba(199, 207, 224, 1);
         float: right;
       }
+
       img {
         vertical-align: middle;
         margin-right: 10px;
       }
     }
-    .data-right {
-    }
+
+    .data-right {}
   }
+
   .book-display {
     margin-top: 19px;
     margin-bottom: 76px;
+
     .book-left,
     .book-right {
       height: 501px;
       background: rgba(255, 255, 255, 1);
       box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
       border-radius: 4px;
-      .book-top{
+
+      .book-top {
         font-size: 22px;
         font-family: Source Han Sans CN;
         font-weight: 400;
         color: rgba(51, 51, 51, 1);
         padding: 13px 42px;
-        border-bottom: 1px solid rgba(225,238,236,1);
+        border-bottom: 1px solid rgba(225, 238, 236, 1);
+
         img {
           vertical-align: middle;
           margin-right: 10px;
         }
       }
     }
+
     .book-left {
       width: 65%;
-      ul{
-        li{
-          float: left;
-          .book-intro{
+      ul {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+        li {
+          &.choosenow{
             border:1px solid rgba(173,224,213,1);
+          }
+          .book-intro {
+            cursor: pointer;
+            display: block;
+            width: 175px;
+            height: 369px;
+            text-align: center;
+            margin-top: 20px;
+            figure{
+              margin-top:10px;
+            }
+            h4 {
+              font-size: 16px;
+              font-family: Microsoft YaHei;
+              font-weight: 400;
+              color: rgba(0, 0, 0, 1);
+              margin-top: 15px;
+              margin-bottom: 18px;
+            }
+            p {
+              font-size: 14px;
+              font-family: Microsoft YaHei;
+              font-weight: 400;
+              color: rgba(153, 153, 153, 1);
+            }
           }
         }
       }
     }
     .book-right {
       width: 33%;
+      .book-table{
+        width: 100%;
+        padding: 10px 38px;
+        table{
+          width:100%;
+          margin-top: 10px;
+          th{
+            font-size:14px;
+            color:#999999;
+            font-family: SourceHanSansCN-Regular;
+            text-align: center;
+          }
+          tr{
+            height:35px;
+            font-size:14px;
+            color:#999999;
+            font-family: SourceHanSansCN-Regular;
+            text-align: center;
+            line-height: 35px;
+            td{
+              &:nth-child(2){
+                a{
+                  color:#2A8571;
+                }
+              }
+            }
+          }
+        }
+        
+      }
     }
   }
 }
