--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -87,11 +87,92 @@
       background-position: 0 50%;
       .search {
         margin-left: 78px;
-        .caret {
-          margin-left: 20px;
+        .select {
+          cursor: pointer;
+          position: relative;
+          width: 170px;
+          height: 50px;
+          line-height: 50px;
+          font-size: 14px;
+          color: #666666;
+          padding-left: 10px;
+          background: rgba(255, 255, 255, 1);
+          border: 1px solid rgba(221, 221, 221, 1);
+          border-radius: 4px;
         }
-        .btn {
-          padding: 14px 36px;
+        .selectVal {
+          font-size: 18px;
+          font-family: Source Han Sans CN;
+          font-weight: 300;
+          color: rgba(170, 170, 170, 1);
+        }
+        .xl-icon {
+          position: absolute;
+          width: 20px;
+          height: 20px;
+          background-image: url("../images/xl-icon_03.png");
+          background-position: 4px 0px;
+          background-repeat: no-repeat;
+          right: 10px;
+          top: 14px;
+        }
+        .select:hover {
+          background-color: #f7f7f7;
+        }
+        .sq-icon {
+          background-position: 4px -33px;
+        }
+        /*--下拉选择列表样式--*/
+        .selectList {
+          z-index: 999;
+          display: none;
+          width: 170px;
+          border: 1px solid #cccccc;
+          border-radius: 6px;
+          position: absolute;
+          top: 49px;
+          left: 0px;
+        }
+        .listA {
+          width: 100%;
+          height: 40px;
+          line-height: 40px;
+          font-size: 18px;
+          font-family: Source Han Sans CN;
+          font-weight: 300;
+          color: rgba(170, 170, 170, 1);
+          text-align: center;
+          display: block;
+          background-color: #ffffff;
+        }
+        .listA:hover {
+          background-color: #f7f7f7;
+          color: rgba(42, 133, 113, 1);
+        }
+        .listA:first-child {
+          border-radius: 6px 6px 0 0;
+        }
+        .listA:last-child {
+          border-radius: 0 0 6px 6px;
+        }
+        /*-------------------------------------------------------------------------------------------------*/
+        .frameTriangle {
+          width: 10px;
+          height: 10px;
+          background-image: url(../images/xl-icon_03.png);
+          background-position: -1px -35px;
+          background-repeat: no-repeat;
+          display: block;
+          position: absolute;
+          top: -10px;
+          left: 95px;
+          background-color: #fff;
+        }
+        .dropDown {
+          position: relative;
+        }
+        .selectListNext {
+          top: 58px;
         }
         .search_box {
           margin-left: 15px;
