--- a/src/plugin/css/reset.css
+++ b/src/plugin/css/reset.css
@@ -4,7 +4,8 @@
     list-style: none;
 }
 
-html {
+
+/* html {
     overflow-y: scroll;
 }
 
@@ -20,7 +21,7 @@ html {
 body {
     width: 100vw;
     overflow: hidden;
-}
+} */
 
 
 /*
@@ -212,4 +213,19 @@ table {
 
 .fr {
     float: right;
+}
+
+.w {
+    width: 1200px;
+    min-width: 1200px;
+    ;
+    margin: auto;
+}
+
+.hidden {
+    display: none!important;
+}
+
+.show {
+    display: block!important;
 }
