--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -1,9 +1,14 @@
-.move {
-  height: 88px;
-  background-color: #2a8571;
+.move{
+  img{
+    display: none;
+  }
+}
+.main{
+  position: relative;
 }
 .banner {
   width: 100%;
+  min-width: 1200px;
   height:603px;
   background-image: url("../images/swiperbanner.png");
   background-size: cover;
@@ -50,7 +55,7 @@
   position: absolute;
   left: 50%;
   margin-left: -600px;
-  top: 210px;
+  top: -510px;
   .tab_search {
     .nav-tabs {
       height: 58px;
@@ -462,8 +467,10 @@
       .serve-item {
         width: 288px;
         padding: 20px;
-        background: rgba(255, 255, 255, 1);
-        border-radius: 4px;
+     
+        background:rgba(255,255,255,1);
+box-shadow:0px 1px 18px 2px rgba(179,206,199,0.5);
+border-radius:4px;
         p {
           font-size: 22px;
           font-family: Source Han Sans CN;
