--- a/src/plugin/css/common.css
+++ b/src/plugin/css/common.css
@@ -1,15 +1,19 @@
 /* 页面头部 */
 
+.top_note {
+    width: 100%;
+    background: rgba(246, 246, 246, 1);
+}
+
+button {
+    display: none;
+}
+
 .header {
     width: 100%;
     min-width: 1200px;
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 6px 6px 0px rgba(204, 204, 204, 0.3);
-}
-
-.head_top {
-    width: 100%;
-    background-color: rgba(246, 246, 246, 1);
 }
 
 .top_head {
@@ -27,6 +31,7 @@
 
 .top_head ul li {
     margin-left: 40px;
+    float: left;
 }
 
 .logo {
@@ -46,6 +51,7 @@
     font-size: 16px;
     font-weight: Regular;
     font-family: SourceHanSansCN-Regular;
+    float: left;
 }
 
 .logo ul li a {
@@ -62,6 +68,7 @@
     font-family: SourceHanSansCN-Regular;
     text-align: center;
     margin-top: 22px;
+    margin-left: 10px;
 }
 
 .activing {
