--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -395,6 +395,7 @@
               color: rgba(51, 51, 51, 1);
             }
             div {
+              font-size: 12px;
               background: rgba(238, 238, 238, 1);
             }
           }
@@ -418,7 +419,9 @@
     .tab-content {
       .news_top {
         margin-top: 10px;
-        .timedate {
+        .container {
+          width: 230px;
+          top: 10px;
           position: relative;
         }
         ul > li {
@@ -433,11 +436,6 @@
           font-family: Source Han Sans CN;
           font-weight: 400;
           color: rgba(42, 133, 113, 1);
-        }
-        .datepicker {
-          width: 127px;
-          height: 34px;
-          text-indent: 2em;
         }
       }
       .news_foot {
