--- a/src/styles/mobileIndex.less
+++ b/src/styles/mobileIndex.less
@@ -161,6 +161,8 @@ text-align: center;
                 font-family: Source Han Sans CN;
                 font-weight: 400;
                 color: rgba(51, 51, 51, 1);
+                display: block;
+                margin-top: 0.15rem;
               }
               div {
                 background: rgba(238, 238, 238, 1);
@@ -180,6 +182,11 @@ text-align: center;
             text-overflow: ellipsis;
           }
         }
+        .news-right{
+          div{
+            font-size: 12px;
+          }
+        }
       }
     }
     .today-active {
@@ -187,8 +194,21 @@ text-align: center;
       .tab-content {
         .news_top {
           margin-top: 0.1rem;
-          .timedate{
+          .container{
+            width: 2.3rem;
+            min-width: 170px;
+            top: 0.2rem;
             position: relative;
+            .input-group-addon{
+              padding:0.06rem 0.12rem;
+              font-size: 0.14rem;
+              // border: 0;
+            }
+            .form-control{
+              height: 0.4rem;
+              line-height: 0;
+              padding: 0.06rem 0.12rem;
+            }
           }
           ul > li {
             width: 0.34rem;
@@ -202,11 +222,6 @@ text-align: center;
             font-family: Source Han Sans CN;
             font-weight: 400;
             color: rgba(42, 133, 113, 1);
-          }
-          .datepicker {
-            width: 1.27rem;
-            height: 0.34rem;
-            text-indent: 2em;
           }
         }
         .news_foot {
@@ -347,7 +362,7 @@ text-align: center;
     //     // height: 3.6rem;
     //   }
       .nav-tabs > li > a {
-        font-size: 22px;
+        font-size: 0.22rem;
         font-family: Source Han Sans CN;
         font-weight: 400;
         color: rgba(51, 51, 51, 1);
