设计图纸完成

--- a/src/styles/donate.less
+++ b/src/styles/donate.less
@@ -1,8 +1,8 @@
 .main {
     min-width: 1200px;
     .navSub {
-      width: 17%;
-      min-width: 248px;
+      width: 18%;
+      min-width: 216px;
       .subNavBox {
         width: 100%;
         background: rgba(255, 255, 255, 1);
@@ -48,7 +48,7 @@
         font-weight: 400;
         color: rgba(51, 51, 51, 1);
         background-position: 6% 50%;
-            padding: 13px;
+            padding: 10px;
         }
       }
       .subNav:hover {
@@ -81,8 +81,7 @@
       }
     }
     .mainContent {
-      width: 83%;
-    //   min-width: 990px;
+      width: 82%;
       padding-top: 82px;
       background-color: #F7F9F9;
       h1 {
@@ -93,8 +92,7 @@
         text-align: center;
       }
       .content {
-        width: 990px;
-        margin:85px auto 0;
+        margin:85px 200px 0;
          ul{
             li{
                 margin-top: 50px;
