--- a/src/plugin/css/common.css
+++ b/src/plugin/css/common.css
@@ -80,6 +80,10 @@ button {
     box-shadow: 0px 6px 6px 0px rgba(204, 204, 204, 0.3);
 }
 
+.activing a {
+    color: #fff!important;
+}
+
 
 /* 页面底部 */
 
