--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -33,18 +33,21 @@
         border: 1px solid rgba(42, 133, 113, 1);
         color: rgba(42, 133, 113, 1);
         background-color: #fff;
-        &.now {
-          font-size: 12px;
-          font-family: Source Han Sans CN;
-          font-weight: 400;
-          color: rgba(255, 255, 255, 1);
-          background: rgba(42, 133, 113, 1);
-        }
         a {
           display: block;
           width: 100%;
           height: 100%;
         }
+        &.now {
+          font-size: 12px;
+          font-family: Source Han Sans CN;
+          font-weight: 400;
+          background: rgba(42, 133, 113, 1);
+          a{
+            color:#fff;
+          }
+        }
+        
       }
     }
   }
@@ -67,7 +70,8 @@
         height: 46px;
         line-height: 26px;
         border: none;
-        color: #333333;
+        color: #333333; 
+        font-family: SourceHanSansCN-Regular;
       }
     }
     .nav-tabs > li.active {
