--- a/src/styles/donateTime.less
+++ b/src/styles/donateTime.less
@@ -1,8 +1,8 @@
 .main {
   min-width: 1200px;
   .navSub {
-    width: 17%;
-    min-width: 248px;
+    width: 18%;
+    min-width: 216px;
     .subNavBox {
       width: 100%;
       background: rgba(255, 255, 255, 1);
@@ -25,9 +25,9 @@
       }
       // 重置侧边栏禁止点击状态
       .noneContent {
-         background-image: none;
-        // pointer-events: none;
-        // cursor: not-allowed;
+        background: none;
+        pointer-events: none;
+        cursor: not-allowed;
         &:hover {
           color: black;
           border-left: none;
@@ -36,15 +36,19 @@
     }
     .subNav {
       border-bottom: solid 1px #e5e3da;
-      padding: 13px;
-      cursor: pointer;
-      font-size: 16px;
-      font-family: Source Han Sans CN;
-      font-weight: 400;
-      color: rgba(51, 51, 51, 1);
-      background: url(../images/youjiantou.png) no-repeat;
-      background-position: 6% 50%;
+
       text-indent: 2em;
+      a {
+        display: block;
+        width: 100%;
+        cursor: pointer;
+        font-size: 16px;
+        font-family: Source Han Sans CN;
+        font-weight: 400;
+        color: rgba(51, 51, 51, 1);
+        background-position: 6% 50%;
+        padding: 10px;
+      }
     }
     .subNav:hover {
       color: rgba(42, 133, 113, 1);
@@ -56,10 +60,9 @@
     }
     .currentDd {
       background-color: rgba(42, 133, 113, 1);
-      color: #fff;
-    }
-    .currentDt {
-      background-image: url(../images/jiantouxia.png);
+      a {
+        color: #fff;
+      }
     }
     .navContent {
       display: none;
@@ -74,18 +77,11 @@
       font-size: 14px;
       color: #333;
     }
-    .navContent li {
-      &.currentDd{
-        a{
-          color:#fff;
-        }
-      }
-    }
   }
   .mainContent {
-    width: 79%;
-    min-width: 948px;
+    width: 82%;
     padding-top: 82px;
+    background-color: #f7f9f9;
     h1 {
       font-size: 34px;
       font-family: Source Han Sans CN;
@@ -94,27 +90,26 @@
       text-align: center;
     }
     .content {
-        margin-left: 320px;
-      h2 {
-          margin-top: 35px;
-        font-size: 24px;
-        font-family: Source Han Sans CN;
-        font-weight: 400;
-        color: rgba(51, 51, 51, 1);
-        cursor: pointer;
-      }
-      ul{
-          margin-top: 27px;
-          li{
-              float: left;
-              margin-right: 30px;
-              a{
-                font-size:16px;
-                font-family:Source Han Sans CN;
-                font-weight:400;
-                color:rgba(42,133,113,1);
-              }
+      margin: 85px 200px 0;
+      ul {
+        li {
+          padding: 0 0 56px 38px;
+          position: relative;
+          border-left: 4px solid rgba(206, 232, 226, 1);
+          &::before {
+            content: "";
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            background: rgba(255, 255, 255, 1);
+            border: 4px solid rgba(42, 133, 113, 1);
+            border-radius: 50%;
+            left: 0;
+            top: 0;
+            margin-left: -12px;
+            margin-top: -10px;
           }
+        }
       }
     }
   }
