所有移动完成

--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -1,6 +1,10 @@
 .main {
   position: relative;
 }
+.row{
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
 .mobile{
   display: none;
 }
@@ -268,8 +272,8 @@
   border-radius: 4px;
   .serve {
     .row {
-      margin-left: 0;
-      margin-right: 0;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
       .col-lg-2 {
         a {
           display: block;
@@ -496,6 +500,7 @@
     padding: 20px;
     background: rgba(255, 255, 255, 1);
     border-radius: 4px;
+    background-image: url('../images/bg(1).png');
     div {
       border-bottom: 1px dotted rgba(204, 204, 204, 1);
       padding: 20px 0;
