--- a/src/styles/helpDetail.less
+++ b/src/styles/helpDetail.less
@@ -1,3 +1,7 @@
+.header{
+  display: none!important;
+}
+
 .main {
     min-width: 1200px;
     .navSub {
@@ -9,6 +13,12 @@
         box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
         border-radius: 4px;
         padding-top: 20px;
+        .moveLogo{
+          display: none;
+        }
+        .tabLan{
+          display: block!important;
+        }
         h1 {
           text-align: center;
           font-size: 24px;
