--- a/src/styles/mobileHelp.less
+++ b/src/styles/mobileHelp.less
@@ -1,40 +1,52 @@
-.header{
-  display: none!important;
-}
 .main {
-  min-width: 1200px;
+  width: 100%;
   .navSub {
-    width: 17%;
-    min-width: 248px;
+    width: 100%;
+    height: 100%;
     .subNavBox {
+      position: fixed;
       width: 100%;
-      background: rgba(255, 255, 255, 1);
+      height: 0.88rem;
       box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
-      border-radius: 4px;
-      padding-top: 20px;
-      .tabLan{
-        display: block!important;
+      text-align: center;
+      background-color: rgba(42, 133, 113, 1);
+      button {
+        width: 0.44rem;
+        height: 0.3rem;
+        position: absolute;
+        left: 0.38rem;
+        top: 50%;
+        margin-top: -0.15rem;
+        background: url("../images/tab.png") no-repeat;
+        background-size: 100% 100%;
+        border: none;
+        outline: none;
       }
-      .moveLogo{
+      .logoA {
+        display: inline-block;
+        height: 0.88rem;
+        .pcLogo {
+          display: none;
+        }
+        
+      }
+      .tabLan {
         display: none;
+        text-align: left;
+        width: 30%;
+      background-color: rgba(118,195,182);
       }
       h1 {
-        text-align: center;
-        font-size: 24px;
-        font-family: Source Han Sans CN;
-        font-weight: bold;
-        color: rgba(42, 133, 113, 1);
-        border-bottom: solid 1px #e5e3da;
-        padding: 27px 26px;
+        display: none;
       }
       img {
-        width: 90%;
+        height: 0.59rem;
+        margin-bottom: 0.14rem;
         display: inline-block;
-        margin-left: 4%;
       }
       // 重置侧边栏禁止点击状态
       .noneContent {
-         background-image: none;
+        background-image: none;
         // pointer-events: none;
         // cursor: not-allowed;
         &:hover {
@@ -45,9 +57,9 @@
     }
     .subNav {
       border-bottom: solid 1px #e5e3da;
-      padding: 13px;
+      padding: 0.13rem;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 0.16rem;
       font-family: Source Han Sans CN;
       font-weight: 400;
       color: rgba(51, 51, 51, 1);
@@ -72,58 +84,63 @@
     }
     .navContent {
       display: none;
-      padding: 5px;
+      padding: 0.05rem;
       border-bottom: solid 1px #e5e3da;
     }
     .navContent li a {
       display: block;
-      padding: 15px;
+      padding: 0.15rem;
       text-align: left;
-      padding-left: 40px;
-      font-size: 14px;
+      padding-left: 0.4rem;
+      font-size: 0.14rem;
       color: #333;
     }
     .navContent li {
-      &.currentDd{
-        a{
-          color:#fff;
+      &.currentDd {
+        a {
+          color: #fff;
         }
       }
     }
   }
   .mainContent {
-    width: 79%;
-    min-width: 948px;
-    padding-top: 82px;
+    width: 100%;
+    
+    padding-top: 0.88rem;
     h1 {
-      font-size: 34px;
+      font-size: 0.34rem;
       font-family: Source Han Sans CN;
       font-weight: bold;
       color: rgba(51, 51, 51, 1);
       text-align: center;
+      margin-top: 0.2rem;
     }
     .content {
-        margin-left: 320px;
+      padding: 0 0.3rem;
       h2 {
-          margin-top: 35px;
-        font-size: 24px;
+        margin-top: 0.35rem;
+        font-size: 0.24rem;
         font-family: Source Han Sans CN;
         font-weight: 400;
-        color: rgba(51, 51, 51, 1);
+        color: rgb(75, 72, 72);
         cursor: pointer;
+        text-align: center;
       }
-      ul{
-          margin-top: 27px;
-          li{
-              float: left;
-              margin-right: 30px;
-              a{
-                font-size:16px;
-                font-family:Source Han Sans CN;
-                font-weight:400;
-                color:rgba(42,133,113,1);
-              }
+      ul {
+       
+        display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+        li {
+          float: left;
+          margin-right: 0.3rem;
+          a {
+            font-size: 16px;
+            font-family: Source Han Sans CN;
+            font-weight: 400;
+            color: rgba(42, 133, 113, 1);
           }
+        }
       }
     }
   }
