--- a/src/styles/news.less
+++ b/src/styles/news.less
@@ -1,3 +1,10 @@
+.top-header{
+  display: none;
+}
+.row{
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
 .main {
   .main-nav {
     margin: 26px 0 19px 0;
@@ -29,6 +36,7 @@
         color: rgba(42, 133, 113, 1);
         border-bottom: solid 1px #e5e3da;
         padding: 27px 26px;
+        display: block;
       }
     }
     .subNav {
@@ -204,6 +212,7 @@ color:rgba(51,51,51,1);
             font-weight: 400;
             color: rgba(255, 255, 255, 1);
             line-height: 50px;
+            cursor: pointer;
           }
         }
       }
